nivasa-macros/tests/trybuild/graphql_invalid_guard_marker.stderr
error: invalid guard marker
 --> tests/trybuild/graphql_invalid_guard_marker.rs:6:5
  |
6 |     /// nivasa-guard:
  |     ^^^^^^^^^^^^^^^^^
